--- a/shopping-cart-app/Resources/invoice.html
+++ b/shopping-cart-app/Resources/invoice.html
@@ -1,8 +1,1 @@
-<html>
-<title>
-Invoice
-</title>
-<body>
-At {date} {name} purchased these products:
-</body>
-</html>
+<html><head><title>Invoice</title></head><body> <br>At 01/01/2019 Ravi purhased these products:<br>Product Id: 101 Product Name: Book Product Price: 80.0 Product discount: 20.0 Product Quantity: 2 Total Product Cost: 160.0<br><br>Product Id: 102 Product Name: Pen Product Price: 140.0 Product discount: 30.0 Product Quantity: 3 Total Product Cost: 420.0<br><br>Total Amount paid: 580.0 </body></html><html><head><title>Invoice</title></head><body> <br>At 01/02/2019 Ravi purhased these products:<br>Product Id: 103 Product Name: Laptop Product Price: 180.0 Product discount: 40.0 Product Quantity: 3 Total Product Cost: 540.0<br><br>Product Id: 104 Product Name: Pencil Product Price: 9.5 Product discount: 5.0 Product Quantity: 4 Total Product Cost: 38.0<br><br>Total Amount paid: 578.0 </body></html><br>Total Amount Spent: 1158.0<br>
