git commit -m "day30"

--- a/Web/js-app/index.html
+++ b/Web/js-app/index.html
@@ -16,5 +16,7 @@
         <a href="welcome2.html">Welcome2</a><br>
         <a href="colorpicker1.html">Color picker 1</a><br>
         <a href="colorpicker2.html">Color picker 2</a><br>
+        <a href="slider.html">Slider</a><br>
+        <a href="blueball.html">BlueBall Game</a><br>
     </body>
 </html>
