--- a/Web/js-app/index.html
+++ b/Web/js-app/index.html
@@ -18,5 +18,8 @@
         <a href="colorpicker2.html">Color picker 2</a><br>
         <a href="slider.html">Slider</a><br>
         <a href="blueball.html">BlueBall Game</a><br>
+        <a href="functioncallback.html">Function CallBack</a><br>
+        <a href="setinterval.html">Set Interval</a><br>
+        <a href="questionbank.html">Question Bank</a><br>
     </body>
 </html>
