--- a/Web/js-app/index.html
+++ b/Web/js-app/index.html
@@ -21,5 +21,7 @@
         <a href="functioncallback.html">Function CallBack</a><br>
         <a href="setinterval.html">Set Interval</a><br>
         <a href="questionbank.html">Question Bank</a><br>
+        <a href="questionbank2.html">Question Bank 2</a><br>
+        <a href="piechart.html">Pie Chart</a><br>
     </body>
 </html>
