--- a/Web/js-app/piechart.html
+++ b/Web/js-app/piechart.html
@@ -8,10 +8,20 @@
     <body>
         <canvas id="canvas"> </canvas>
         <script>
+            var correctAnswer=3
+            var wrongAnswer=2
+            var nacounter=4
+            var start_angle=0
             var canvas=document.getElementById("canvas")
-            canvas.width=300
-            canvas.height=300
+            canvas.width=500
+            canvas.height=500
             var dimension=canvas.getContext("2d")
+            var totalvalue=correctAnswer+wrongAnswer+nacounter
+            var slice_angle=2*Math.PI*correctAnswer/totalvalue
+            var pieRadius = Math.min(canvas.width/2,canvas.height/2);
+            var labelX = canvas.width/2 + (pieRadius / 2) * Math.cos(start_angle + slice_angle/2);
+            var labelY = canvas.height/2 + (pieRadius / 2) * Math.sin(start_angle + slice_angle/2);
+            var labelText = Math.round(100 * correctAnswer / totalvalue);
 
             function drawLine(dimension,startX,startY,endX,endY){
                 dimension.beginPath()
@@ -31,10 +41,15 @@
                 dimension.arc(centerX, centerY, radius, startAngle, endAngle)
                 dimension.closePath()
                 dimension.fill()
+                dimension.fillStyle = "white";
+                dimension.font = "bold 20px Arial";
+                dimension.fillText(labelText+"%", labelX,labelY);
+                // dimension.fillText('hello',200,100,140)
             }
             //drawLine(dimension,100,100,200,200)
-            drawArc(dimension, 150,150,150, 0, 2*Math.PI)
-            drawPieSlice(dimension, 150,150,150, Math.PI/2, Math.PI/2 + Math.PI/2, 'yellow')
+            // drawArc(dimension, 250,250,150, 0, 2*Math.PI)
+            drawPieSlice(dimension, 250,250,150, 0, Math.PI, 'yellow')
+            drawPieSlice(dimension, 250,250,150, Math.PI, 2*Math.PI, 'blue')
         </script>
     </body>
 </html>
