--- a/Web/js-app/index.html
+++ b/Web/js-app/index.html
@@ -27,5 +27,6 @@
         <a href="localstorage.html">Local Storage</a><br>
         <a href="storingobjects.html">Storing Objects</a><br>
         <a href="ajax.html">Ajax</a><br>
+        <a href="login.html">Login Page</a><br>
     </body>
 </html>
