--- a/Web/jquery-app/index.html
+++ b/Web/jquery-app/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <h1 style="text-align: center;">JQuery</h1>
-        <a href="welcome.html">Welcome Page</a>
+        <a href="welcome.html">Welcome Page</a><br>
+        <a href="welcome2.html">Welcome Page 2</a><br>
+        <a href="colorpicker1.html">Color picker 1</a><br>
+        <a href="colorpicker2.html">Color picker 2</a><br>
+        <a href="slider.html">Slider</a><br>
+        <a href="blueball.html">BlueBall Game</a><br>
+        <a href="questionbank.html">Question Bank</a><br>
     </body>
 </html>
