--- a/Web/jquery-app/index.html
+++ b/Web/jquery-app/index.html
@@ -14,5 +14,9 @@
         <a href="slider.html">Slider</a><br>
         <a href="blueball.html">BlueBall Game</a><br>
         <a href="questionbank.html">Question Bank</a><br>
+        <a href="jqueryajax.html">Ajax in JQuery</a><br>
+        <a href="binding.html">Binding</a><br>
+        <a href="numbersapi.html">Numbers API</a><br>
+        <a href="studentsapi.html">Students API</a><br>
     </body>
 </html>
