--- a/Web/js-app/index.html
+++ b/Web/js-app/index.html
@@ -28,5 +28,7 @@
         <a href="storingobjects.html">Storing Objects</a><br>
         <a href="ajax.html">Ajax</a><br>
         <a href="login.html">Login Page</a><br>
+        <a href="modulepattern.html">Module Pattern</a><br>
+        <a href="constructorpattern.html">Constructor Pattern</a><br>
     </body>
 </html>
