--- a/Web/angular-app/index.html
+++ b/Web/angular-app/index.html
@@ -9,5 +9,10 @@
         <a href="expression.html">Expression</a><br>
         <a href="module.html">Module</a><br>
         <a href="students.html">Students</a><br>
+        <a href="nginit.html">ng-init</a><br>
+        <a href="ngbind.html">ng-bind</a><br>
+        <a href="ngstyle.html">ng-style</a><br>
+        <a href="ngrepeat.html">ng-repeat</a><br>
+        <a href="blueballangular.html">Blueball Game</a><br>
     </body>
 </html>
