--- a/Web/angular-app/index.html
+++ b/Web/angular-app/index.html
@@ -14,5 +14,10 @@
         <a href="ngstyle.html">ng-style</a><br>
         <a href="ngrepeat.html">ng-repeat</a><br>
         <a href="blueballangular.html">Blueball Game</a><br>
+        <a href="twowaybinding.html">Two Way Binding</a><br>
+        <a href="onewaybinding.html">One Way Binding</a><br>
+        <a href="onetimebinding.html">One Time Binding</a><br>
+        <a href="typesofbindings.html">Types of Bindings</a><br>
+        <a href="binding.html">Binding</a><br>
     </body>
 </html>
