--- a/Web/angular-app/blueballangular.html
+++ b/Web/angular-app/blueballangular.html
@@ -6,6 +6,11 @@
         </title>
         <script src="angular.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+        <style>
+            .red{
+                background-color: red;
+            }
+        </style>
     </head>
     <body style="text-align: center; background-color: khaki">
         <h1 style="text-align: center"><b><i>Welcome to <span style="color: blue">BlueBall</span> Game</i></b></h1>
@@ -40,7 +45,7 @@
             <p style="text-align: left">Time Taken: <span id="timetaken"></span></p>
                 <p id="gameover"></p><br>
                 You have only 10 seconds to play this game<br><br>
-                <span ng-init="numbers" ng-repeat="x in numbers"><button id="button{{x}}">{{x}}</button></span>
+                <span ng-init="numbers" ng-repeat="x in numbers"><button id="button{{x}}" ng-click="setButtonColor($event)">{{x}}</button></span>
             </div>
         </div>
     </div>
@@ -62,7 +67,14 @@
                 $scope.numbers=[]
                 for(var i=0;i<50;i++)
                 $scope.numbers.push(i)
+                $scope.setButtonColor=function(currentButton){
+                    console.log(currentButton)
+                // var pressbutton=angular.element(`#button${currentButton}`)
+                // pressbutton.class="red"
+            }
             })
+            
+            
         </script>
     </body>
 </html>
