--- a/Web/angular-app/index.html
+++ b/Web/angular-app/index.html
@@ -19,5 +19,6 @@
         <a href="onetimebinding.html">One Time Binding</a><br>
         <a href="typesofbindings.html">Types of Bindings</a><br>
         <a href="binding.html">Binding</a><br>
+        <a href="numbersapi.html">Numbers API</a><br>
     </body>
 </html>
