--- a/Web/angular-app/index.html
+++ b/Web/angular-app/index.html
@@ -20,5 +20,8 @@
         <a href="typesofbindings.html">Types of Bindings</a><br>
         <a href="binding.html">Binding</a><br>
         <a href="numbersapi.html">Numbers API</a><br>
+        <a href="spa.html">SPA</a><br>
+        <a href="minispa.html">mini SPA</a><br>
+        <a href="mini-spa\index.html">Mini SPA</a><br>
     </body>
 </html>
