--- a/Servlets/contacts-mvc-app/WebContent/index.html
+++ b/Servlets/contacts-mvc-app/WebContent/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>This Index File Inside Contacts-app</h1>
+<br><a href="http://localhost:8080/contacts-mvc-app/contacts">Contact-App</a>
 </body>
 </html>
