--- a/Struts2/contact-struts-app/src/main/webapp/index.html
+++ b/Struts2/contact-struts-app/src/main/webapp/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1>Welcome to Gradle App</h1>
 <br><br>
-<a href="http://localhost:8080/gradle-app2/home">Home</a>
+<a href="contact">Contact</a>
 </body>
 </html>
